<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/navigation_matching">

    <fragment
        android:id="@+id/navigation_matching"
        android:name="com.ag.android.contatto.ui.matching.MatchingFragment"
        android:label="@string/matching"
        app:defaultNavHost="true" />
    <fragment
        android:id="@+id/navigation_chat"
        android:name="com.ag.android.contatto.ui.chat.ChatFragment"
        android:label="@string/chat" />
    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.ag.android.contatto.ui.profile.ProfileFragment"
        android:label="@string/profile" />
</navigation>